force-app/main/default/objects/custom_create236__c/custom_create236__c.object-meta.xml
<CustomObject>
    <label>Custom created object236</label>
    <nameField>
        <label>Custom created field</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Custom created objects236</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>