force-app/main/default/objects/custom_create236__c/fields/custom_create_236field541__c.field-meta.xml
<CustomField>
    <fullName>custom_create_236field541__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Custom created 236field541</label>
    <type>Checkbox</type>
</CustomField>